# empty-swagger/src/main/resources/api/swagger.json
@@ -16,27 +16,85 @@
     }
   },
   "host" : "localhost:9090",
-  "basePath" : "/api",
+  "basePath" : "/",
   "tags" : [ {
     "name" : "pet",
     "description" : "关于宠物对象的操作"
   } ],
   "schemes" : [ "http", "https" ],
   "paths" : {
+    "/pet" : {
+      "post" : {
+        "tags" : [ "pet" ],
+        "summary" : "添加一只宠物到宠物商店",
+        "description" : "",
+        "operationId" : "addPet",
+        "consumes" : [ "application/json", "application/xml" ],
+        "produces" : [ "application/xml", "application/json" ],
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "description" : "要添加的宠物对象",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/definitions/Pet(宠物)"
+          }
+        } ],
+        "responses" : {
+          "405" : {
+            "description" : "无效输入"
+          }
+        },
+        "security" : [ {
+          "petstore_auth" : [ "write:pets", "read:pets" ]
+        } ]
+      },
+      "put" : {
+        "tags" : [ "pet" ],
+        "summary" : "更新已经存在的宠物信息",
+        "description" : "",
+        "operationId" : "updatePet",
+        "consumes" : [ "application/json", "application/xml" ],
+        "produces" : [ "application/xml", "application/json" ],
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "description" : "要更新的宠物对象",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/definitions/Pet(宠物)"
+          }
+        } ],
+        "responses" : {
+          "400" : {
+            "description" : "无效的ID"
+          },
+          "404" : {
+            "description" : "未找到指定ID的宠物"
+          },
+          "405" : {
+            "description" : "405验证错误"
+          }
+        },
+        "security" : [ {
+          "petstore_auth" : [ "write:pets", "read:pets" ]
+        } ]
+      }
+    },
     "/pet/{petId}" : {
       "get" : {
         "tags" : [ "pet" ],
         "summary" : "根据ID获取宠物对象",
-        "description" : "Returns a pet when ID < 10.  ID > 10 or nonintegers will simulate API error conditions",
+        "description" : "ID有效范围为[1,10],并且必须为整形数值",
         "operationId" : "getPetById",
         "produces" : [ "application/xml", "application/json" ],
         "parameters" : [ {
           "name" : "petId",
           "in" : "path",
-          "description" : "ID of pet that needs to be fetched",
+          "description" : "你要获取的宠物的ID",
           "required" : true,
           "type" : "integer",
-          "maximum" : 5.0,
+          "maximum" : 10.0,
           "minimum" : 1.0,
           "format" : "int64"
         } ],
@@ -55,8 +113,35 @@
           }
         },
         "security" : [ {
-          "api_key" : [ ]
+          "petstore_auth" : [ "write:pets", "read:pets" ]
+        } ]
+      },
+      "delete" : {
+        "tags" : [ "pet" ],
+        "summary" : "根据ID删除宠物对象",
+        "description" : "",
+        "operationId" : "deletePet",
+        "produces" : [ "application/xml", "application/json" ],
+        "parameters" : [ {
+          "name" : "api_key",
+          "in" : "header",
+          "required" : false,
+          "type" : "string",
+          "default" : ""
         }, {
+          "name" : "petId",
+          "in" : "path",
+          "description" : "要删除的宠物ID",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "400" : {
+            "description" : "无效的ID"
+          }
+        },
+        "security" : [ {
           "petstore_auth" : [ "write:pets", "read:pets" ]
         } ]
       }
@@ -89,9 +174,6 @@
         "name" : {
           "type" : "string"
         }
-      },
-      "xml" : {
-        "name" : "Category"
       }
     },
     "Pet(宠物)" : {
@@ -134,9 +216,6 @@
           "description" : "pet status in the store",
           "enum" : [ "available", "pending", "sold" ]
         }
-      },
-      "xml" : {
-        "name" : "Pet"
       }
     },
     "Tag" : {
@@ -149,9 +228,6 @@
         "name" : {
           "type" : "string"
         }
-      },
-      "xml" : {
-        "name" : "Tag"
       }
     }
   }
